--- a/fields/api.go.tmpl
+++ b/fields/api.go.tmpl
@@ -2,22 +2,19 @@
 
 {{ define "field" }}
 	{{ .FieldName }} {{ if .IsArray }}[]{{end}}{{ .FieldType }} `json:"{{ .JSONName }}{{ if .OmitEmpty }},omitempty{{ end }}"` {{ if .FieldValidation }}// {{ .FieldValidation }}{{ end }} {{- end }}
-{{ define "field-emptyStringInt" }}
-	{{- if ne .FieldType "int" }}{{else}}
-	    {{ .FieldName }} {{ if .IsArray }}[]{{end}}emptyStringInt `json:"{{ .JSONName }}{{ if .OmitEmpty }}{{ end }}"`{{ end }} {{- end }}
-{{ define "field-numberOrString" }}
-	{{- /* this is kind of a hack, probably a better way to do this when looking at the normalized validation */ -}}
-	{{- if and (eq .FieldType "string") (or (eq .JSONName "channel") (eq .JSONName "backup_channel") (eq .JSONName "tx_power")) }}
-	    {{ .FieldName }} {{ if .IsArray }}[]{{end}}numberOrString `json:"{{ .JSONName }}{{ if .OmitEmpty }}{{ end }}"`{{ end }} {{- end }}
+{{ define "field-customUnmarshalType" }}
+	{{- if eq .CustomUnmarshalType "" }}{{else}}
+			{{ .FieldName }} {{ if .IsArray }}[]{{end}}{{ .CustomUnmarshalType }} `json:"{{ .JSONName }}{{ if .OmitEmpty }}{{ end }}"`{{ end }} {{- end }}
 {{ define "typecast" }}
-    {{- if eq .FieldType "int" }}{{- if .IsArray }}
-    dst.{{ .FieldName }}= make([]int, len(aux.{{ .FieldName }}))
-    for i, v := range aux.{{ .FieldName }} {
-        dst.{{ .FieldName }}[i] = int(v)
-    }
-    {{- else }}
-    dst.{{ .FieldName }} = int(aux.{{ .FieldName }})
-    {{- end }}{{- end }}{{- end }}
+	{{- if eq .CustomUnmarshalType "" }}{{else}}
+		{{- if .IsArray }}
+		dst.{{ .FieldName }}= make([]{{ .FieldType }}, len(aux.{{ .FieldName }}))
+		for i, v := range aux.{{ .FieldName }} {
+				dst.{{ .FieldName }}[i] = {{ .FieldType }}(v)
+		}
+		{{- else }}
+		dst.{{ .FieldName }} = {{ .FieldType }}(aux.{{ .FieldName }})
+		{{- end }}{{- end }}{{- end }}
 {{ define "field-embed" }}
 	{{ .FieldName }} {{ if .IsArray }}[]{{end}}{{ if not .Fields }}{{ .FieldType }}{{ else }}struct {
 	{{ range $fk, $fv := .Fields }}{{ if not $fv }}
@@ -58,8 +55,8 @@ type {{ $k }} struct {
 func (dst *{{ $k }}) UnmarshalJSON(b []byte) error {
 	type Alias {{ $k }}
 	aux := &struct {
-	    {{- range $fk, $fv := $v.Fields }}{{ if not $fv }}
-	    {{- else }}{{- template "field-emptyStringInt" $fv }}{{- template "field-numberOrString" $fv }}{{ end }}{{- end }}
+			{{- range $fk, $fv := $v.Fields }}{{ if not $fv }}
+			{{- else }}{{- template "field-customUnmarshalType" $fv }}{{ end }}{{- end }}
 
 		*Alias
 	}{
@@ -71,8 +68,8 @@ func (dst *{{ $k }}) UnmarshalJSON(b []byte) error {
 		return fmt.Errorf("unable to unmarshal alias: %w", err)
 	}
 
-    {{- range $fk, $fv := $v.Fields }}{{ if not $fv }}
-    {{- else }}{{- template "typecast" $fv }}{{ end }}{{ end }}
+		{{- range $fk, $fv := $v.Fields }}{{ if not $fv }}
+		{{- else }}{{- template "typecast" $fv }}{{ end }}{{ end }}
 
 	return nil
 }
