--- a/fields/api.go.tmpl
+++ b/fields/api.go.tmpl
@@ -21,6 +21,7 @@
 	{{ else }}{{- template "field-embed" $fv }}{{ end }}{{ end }}
 }{{ end }} `json:"{{ .JSONName }}{{ if .OmitEmpty }},omitempty{{ end }}"` {{ if .FieldValidation }}// {{ .FieldValidation }}{{ end }} {{- end }}
 // Code generated from ace.jar fields *.json files
+// Controller Version {{ .ControllerVersion }}
 // DO NOT EDIT.
 
 package unifi
