Add missing User time fields, allow use of Time instead of int.

--- a/fields/api.go.tmpl
+++ b/fields/api.go.tmpl
@@ -29,6 +29,8 @@ import (
 	"context"
 	"encoding/json"
 	"fmt"
+	{{ range $k, $v := .Packages }}"{{ $k }}"
+	{{ end -}}
 )
 
 // just to fix compile issues with the import
